# reis-finance

./: Cargo.toml  README.md  shell.nix
.github/workflows/: ci.yml  release.yml  rust.yml
resources/tests/: apple-dividends.csv  apple-quotes-6m.csv  google-splits.csv  schwab_success.csv  timeline_summary_success.csv  trading212_dir_success.csv  trading212_success.csv
resources/tests/input/schwab/: 2019.csv
resources/tests/input/trading212/: 2021.csv  2022.csv  2023.csv
src/: currency.rs  dividends.rs  lib.rs  liquidated.rs  main.rs  perpetual_inventory.rs  perpetutal_inventory.rs  portfolio.rs  realized.rs  schema.rs  summary.rs  timeline.rs  uninvested.rs
src/broker/: mod.rs  schema.rs  schwab.rs  tbroker.rs  trading212.rs
src/brokers/: broker.rs  mod.rs  trading212.rs
src/lib/: currency.rs  dividends.rs  global_conf.rs  googlesheet.rs  lib.rs  liquidated.rs  perpetual_inventory.rs  portfolio.rs  schema.rs  summary.rs  timeline.rs  uninvested.rs
src/lib/broker/: mod.rs  schwab.rs  trading212.rs
src/lib/scraper/: cache.rs  mod.rs  yahoo.rs
src/lib/utils/: mod.rs  polars.rs  test.rs
src/scraper/: mod.rs  scraper.rs  tscraper.rs  yahoo.rs
src/testutils/: mod.rs
src/utils/: mod.rs  test.rs
