[package]
name = "reis-finance"
version = "0.1.0"
edition = "2021"

[lib]
name = "reis_finance_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "reis_finance_cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
chrono = "0.4.31"
clap = { version = "4.5.0", features = ["derive"] }
derive_more = "0.99.17"
dir = "0.1.2"
either = "1.9.0"
glob = "0.3.1"
lazy_static = "1.4.0"
polars = {version = "0.37.0", features = ["lazy", "strings", "cum_agg", "dtype-struct", "round_series"]}
polars-lazy = {version = "0.37.0", features = ["pivot", "regex"]}
polars-ops = "0.37.0"
regex = "1.10.4"
serde = "1.0.197"
serde_json = "1.0.114"
sheets = "0.7.0"
strum = {version = "0.25.0", features = ["derive"]}
strum_macros = "0.25.3"
time = {version="0.3.31", features = ["parsing", "formatting"]}
tokio-test = "0.4.3"
yahoo_finance_api = "2.1.0"
