[package]
name = "reis-finance"
version = "0.1.0"
edition = "2021"

[lib]
name = "reis_finance_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "reis_finance_cli"
path = "src/main.rs"

[profile.dev.package."*"]
opt-level = 2
debug = "line-tables-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
chrono = {version = "0.4.37", features = ["now"] }
clap = { version = "4.5.0", features = ["derive"] }
derive_more = "0.99.17"
dirs = "5"
glob = "0.3.1"
itertools = "0.12.1"
polars = {version = "0.39.2", features = ["lazy", "strings", "cum_agg", "dtype-struct", "round_series", "json", "regex", "pivot", "is_in"]}
polars-ops = "0.39.2"
regex = "1.10.4"
serde = "1.0.197"
serde_json = "1.0.114"
sheets = "0.7.0"
strum = {version = "0.25.0", features = ["derive"]}
time = {version="0.3.31", features = ["parsing", "formatting"]}
tokio = "1.37.0"
tokio-test = "0.4.3"
yahoo_finance_api = "2.1.0"
